# Semantic-Plagiarism-Engine

./: .gitignore  CLI_REFERENCE.md  README.md  pyproject.toml  requirements.txt  scaffold.py
data/processed/: README.md
data/raw/: README.md
data/raw/quora/: sample_pairs.csv
data/sample_corpus/: README.md  doc_01.txt  doc_02.txt  doc_04.txt  doc_05.txt  doc_06.txt  doc_07.txt  doc_08.txt  doc_10.txt  doc_11.txt
docs/: Report.tex  project_spec.tex
notebooks/: exploration.ipynb
outputs/: candidates.csv  candidates_strict.csv  metrics.csv  metrics_first30.csv  metrics_pan_pc11.csv  metrics_pan_pc11_k3.csv  metrics_swept.csv  pan_pc11_threshold_sweep.csv  threshold_sweep.csv  two_file_compare.json
scripts/: prepare_pan_pc11_pairs.py
src/plagiarism_engine/: __init__.py  cli.py  dataset.py  evaluation.py  lsh.py  minhash.py  preprocessing.py  simhash.py
tests/: test_engine.py  test_minhash.py  test_preprocessing.py
