[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "Semantic-Plagiarism-Engine"
version = "0.1.0"
description = "A command-line engine for detecting near-duplicate and copied documents."
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "numpy>=1.26.0, <2.2.0",
    "pandas>=2.2.0, <3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "black>=24.10.0",
    "flake8>=7.1.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
minversion = "8.3"
addopts = "-ra -q"
testpaths = [
    "tests",
]